--- a/main.ipynb
+++ b/main.ipynb
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "# bugs\n",
+    "# bugs 2\n",
     "def calcular_materiales(largo, ancho, espesor):\n",
     "    tabla = prettytable.PrettyTable()\n",
     "    tabla.field_names = [\"Variable\", \"Valor\"]\n",
